Restructure backend into MVC pattern and add authentication

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "backend",
+  "name": "infuture-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["nodejs", "express", "mongodb", "api"],
+  "author": "InFuture Team",
   "license": "ISC",
-  "description": "",
+  "description": "Backend API for InFuture Application Admin System",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
